# capstone-2021-2021-26

./: .gitignore  .gitmodules  404.md  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  GameEngine.sln  GenerateProject.bat  INSTALL.vcxproj  INSTALL.vcxproj.filters  Popeye.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _config.yml  about.md  cmake_install.cmake  index.html  index.md  premake5.lua  style.scss
Eyeball/: CMakeLists.txt  Eyeball.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  eyeball.vcxproj  eyeball.vcxproj.filters  imgui.ini  popeye.info
Eyeball/Root/scene/: test.pop
Eyeball/Root/scripts/: customscript.cpp  customscript.h
Eyeball/shader/: fragmentShader.GLSL  gridfrag.glsl  gridvert.glsl  scenefrag.glsl  scenevert.glsl  vertexShader.GLSL
Eyeball/src/: App.cpp  GameApp.cpp
Game/: Game.vcxproj  Game.vcxproj.filters  imgui.ini
Game/src/: GameApp.cpp
GameEngine/: GameEngine.aps  GameEngine.vcxproj  GameEngine.vcxproj.filters  Window.h
GameEngine/src/: pch.h
GameEngine/src/Engine/: Application.cpp  Application.h  EntryPoint.h  GUI.cpp  GUI.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h
GameEngine/src/Engine/Events/: Event.h
GameEngine/src/Engine/GUI/: GUIManager.cpp  GUIManager.h
Popeye/: CMakeLists.txt  GameEngine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Popeye.vcxproj  Popeye.vcxproj.filters  cmake_install.cmake  popeye.vcxproj  popeye.vcxproj.filters
Popeye/src/: Popeye.h  pch.h
Popeye/src/Engine/: Core.h
Popeye/src/Engine/GUI/: imgui_impl_opengl3.cpp
Popeye/src/Popeye/: Application.cpp  Application.h  Core.h  Display.cpp  Display.h  Editor.cpp  Editor.h  EntryPoint.h  FileIO.cpp  FileIO.h  Gizmo.cpp  Gizmo.h  KeyCode.h  Log.cpp  Log.h  Mainframe.cpp  Mainframe.h  MouseCode.h  Renderer.cpp  Renderer.h  mesh.cpp  mesh.h
Popeye/src/Popeye/Component/: Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  Light.h  Material.h  MeshRenderer.cpp  MeshRenderer.h  PhysicsComponents.cpp  PhysicsComponents.h  RenderingComponents.cpp  RenderingComponents.h  ScriptComponents.cpp  ScriptComponents.h  Transform.cpp  Transform.h  UIComponents.cpp  UIComponents.h
Popeye/src/Popeye/Event/: EventHandler.cpp  EventHandler.h
Popeye/src/Popeye/Events/: EventManager.cpp  EventManager.h  Events.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h
Popeye/src/Popeye/GUI/: GUIManager.cpp  GUIManager.h  IconsForkAwesomeLargeIcon.h  Tabs.cpp  Tabs.h  imgui_custom_widgets.cpp  imgui_custom_widgets.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
Popeye/src/Popeye/Gameobject/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
Popeye/src/Popeye/Manager/: ComponentManager.cpp  ComponentManager.h  FileManager.cpp  FileManager.h  GUIManager.cpp  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h
Popeye/src/Popeye/Resource/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.h  shaders.cpp
Popeye/src/Popeye/Scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManger.cpp  SceneManger.h
Popeye/src/Popeye/System/: EventSystem.cpp  EventSystem.h  FileSystem.cpp  FileSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderingSystem.cpp  RenderingSystem.h  ScriptingSystem.cpp  ScriptingSystem.h  UISystem.cpp  UISystem.h
_includes/: navbar.html
_layouts/: default.html
_posts/: 2014-3-3-Hello-World.md  2021-3-28-Team-Members.md  2021-3-29-Introduction-Video.md  2021-3-30-Popeye-Engine.md  How_to
bin-int/Debug-windows-x86_64/Eyeball/: Eyeball.exe.recipe  vc142.idb
bin-int/Debug-windows-x86_64/Eyeball/Eyeball.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-windows-x86_64/Popeye/: Popeye.dll.recipe  vc142.idb
bin-int/Debug-windows-x86_64/Popeye/Popeye.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Popeye.lastbuildstate  Popeye.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/: pdf.md
